# messenger_gateway

./: .gitignore  CMakeLists.txt  main.cpp
include/common/: auth_middleware.h  http_service.h  logger.h  request_validator.h  service_base.h
include/data/: connection_manager.h  message_manager.h  user_manager.h
include/handlers/: auth_handlers.h  message_handlers.h  user_handlers.h  websocket_handlers.h
include/services/: auth_service.h  message_service.h  user_service.h  websocket_service.h
src/common/: auth_middleware.cpp  http_service.cpp  logger.cpp  request_validator.cpp  service_base.cpp
src/data/: connection_manager.cpp  message_manager.cpp  user_manager.cpp
src/handlers/: auth_handlers.cpp  message_handlers.cpp  user_handlers.cpp  websocket_handlers.cpp
src/services/: auth_service.cpp  message_service.cpp  user_service.cpp  websocket_service.cpp
web/: index.html
